--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,7 +133,7 @@
     <%= link_to item_path(item) do %>
       <div class='item-img-content'>
         <%= image_tag item.image, class: "item-img" %>
-   <% if item.orders.exists? %>
+   <% if item.order %>
   <div class='sold-out'>
     <span>Sold Out!!</span>
   </div>
