--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,7 +16,7 @@
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.price %></p>
-          <p class='item-price-sub-text'><%= @item.shipping_charge.fee %></p>
+          <p class='item-price-sub-text'><%= @item.shipping_charge.charge %></p>
         </div>
       </div>
     </div>
